--- 1.1.1-SNAPSHOT

Create hasInstance property of main Work for 776 field (fixes lcnetdev/marc2bibframe2#31)
Create bflc:Relation object for bflc:relation proeprty (fixes lcnetdev/marc2bibframe2#34)
Fix conversion of hierarchical geographic tags (662, 752) (fixes lcnetdev/marc2bibframe2#30)
Update conversion of name fields $e to create bflc:relatorMatchKey property (fixes ntra00/marc2bibframe2#12)
Fix 340 $i conversion to create SystemRequirement object (fixes ntra00/marc2bibframe2#19)
Fix 340 $i and 538 conversions to assign correct property and class (systemRequirement/SystemRequirement) (fixes lcnetdev/marc2bibframe2#22)
Fix 344 $d conversion to assign correct class (GrooveCharacteristic) (fixes lcnetdev/marc2bibframe2#20)
Fix incorrect rdf:resource attribute for 242 $y conversion (fixes ntra00/marc2bibframe2#15)
Correct bug in processing of name $e (fixes ntra00/marc2bibframe2#10)
Improve handling of "no attempt to code" character ("|") in 008 (fixes ntra00/marc2bibframe2#8)

--- 1.1.0 2017/04/06

Set correct class of ShelfMark object for 050 based on LCC validation (fixes ntra00/marc2bibframe2#9)
Correct processing of extended dates from 008 (merge PR lcnetdev/marc2bibframe2#17)
Correct documentation error for YAZ configuration (merge PR lcnetdev/marc2bibframe2#14)
Add support for parameter "idsource" to set the URI for the source of the Local identifier derived from the 001 (fixes ntra00/marc2bibframe2#5)
Update conversion for 016 (fixes ntra00/marc2bibframe2#6)
Trims punctuation from bf:Issn elements created by 830 $x (fixes lcnetdev/marc2bibframe2#8)
Add conversion for 385/386 $b to create bflc:demographicGroup property for object URI from $0 (fixes ntra00/marc2bibframe2#4)
Add rudimentary LCC validation for 050 $a (fixes ntra00/marc2bibframe2#3)
Update conversion for $0/$w (fixes ntra00/marc2bibframe2#2)
Fix problems with test suite (fixes lcnetdev/marc2bibframe2/issues/9)
Update namespace in ConvSpec-880.xspec
More TravisCI configuration

--- 1.0.1
