@@ -9,11 +9,11 @@
 
   <x:scenario label="Uniform title bf:Title creation">
     <x:context href="data/ConvSpec-240andX30-UnifTitle/marc.xml"/>
-    <x:expect label="Work rdfs:label generation" test="//bf:Work[1]/rdfs:label = 'The Encyclopedia of Latin American history and culture. (1952). [between 1775 and 1800]. Manuscripts, Latin. French violin, viola, D major. arr. O.T. Book 4. Selections.'"/>
-    <x:expect label="title match key generation" test="//bf:Work[1]/bf:title/bf:Title/bflc:title30MatchKey = 'The Encyclopedia of Latin American history and culture. (1952). [between 1775 and 1800]. Manuscripts, Latin. French violin, viola, D major. arr. O.T. Book 4. Selections.'"/>
-    <x:expect label="title marc key generation" test="//bf:Work[1]/bf:title/bf:Title/bflc:title30MarcKey = '1304 $aThe Encyclopedia of Latin American history and culture.$d(1952).$f[between 1775 and 1800].$gManuscripts, Latin.$hSound recording.$lFrench$mviolin, viola,$rD major.$oarr.$pO.T.$nBook 4.$kSelections.$0(ID)0001$w(ID)0002'"/>
-    <x:expect label="rdfs:label generation" test="//bf:Work[1]/bf:title/bf:Title/rdfs:label = 'The Encyclopedia of Latin American history and culture. (1952). [between 1775 and 1800]. Manuscripts, Latin. French violin, viola, D major. arr. O.T. Book 4. Selections.'"/>
-    <x:expect label="title sort string generation" test="//bf:Work[1]/bf:title/bf:Title/bflc:titleSortKey = 'Encyclopedia of Latin American history and culture. (1952). [between 1775 and 1800]. Manuscripts, Latin. French violin, viola, D major. arr. O.T. Book 4. Selections.'"/>
+    <x:expect label="Work rdfs:label generation" test="//bf:Work[1]/rdfs:label = 'The Encyclopedia of Latin American history and culture. (1952). [between 1775 and 1800]. Manuscripts, Latin. violin, viola, D major. arr. O.T. Book 4. Selections.'"/>
+    <x:expect label="title match key generation" test="//bf:Work[1]/bf:title/bf:Title/bflc:title30MatchKey = 'The Encyclopedia of Latin American history and culture. (1952). [between 1775 and 1800]. Manuscripts, Latin. violin, viola, D major. arr. O.T. Book 4. Selections.'"/>
+    <x:expect label="title marc key generation" test="//bf:Work[1]/bf:title/bf:Title/bflc:title30MarcKey = '1304 $aThe Encyclopedia of Latin American history and culture.$d(1952).$f[between 1775 and 1800].$gManuscripts, Latin.$hSound recording.$mviolin, viola,$rD major.$oarr.$pO.T.$nBook 4.$kSelections.$0(ID)0001$w(ID)0002'"/>
+    <x:expect label="rdfs:label generation" test="//bf:Work[1]/bf:title/bf:Title/rdfs:label = 'The Encyclopedia of Latin American history and culture. (1952). [between 1775 and 1800]. Manuscripts, Latin. violin, viola, D major. arr. O.T. Book 4. Selections.'"/>
+    <x:expect label="title sort string generation" test="//bf:Work[1]/bf:title/bf:Title/bflc:titleSortKey = 'Encyclopedia of Latin American history and culture. (1952). [between 1775 and 1800]. Manuscripts, Latin. violin, viola, D major. arr. O.T. Book 4. Selections.'"/>
     <x:expect label="$a/$t becomes mainTitle" test="//bf:Work[1]/bf:title/bf:Title/bf:mainTitle = 'The Encyclopedia of Latin American history and culture'"/>
     <x:expect label="$n becomes a partNumber" test="//bf:Work[1]/bf:title/bf:Title/bf:partNumber[1] = 'Book 4'"/>
     <x:expect label="$p becomes a partName" test="//bf:Work[1]/bf:title/bf:Title/bf:partName[1] = 'O.T'"/>
@@ -37,7 +37,9 @@
     <x:expect label="$h becomes a genreForm" test="//bf:Work[@rdf:about='http://example.org/1#Work']/bf:genreForm[2]/bf:GenreForm/rdfs:label = 'Sound recording'"/>
     <x:expect label="$k becomes a natureOfContent" test="//bf:Work[@rdf:about='http://example.org/1#Work']/bf:natureOfContent = 'Selections'"/>
     <x:expect label="$k also becomes a genreForm" test="//bf:Work[@rdf:about='http://example.org/1#Work']/bf:genreForm[3]/bf:GenreForm/rdfs:label = 'Selections'"/>
-    <x:expect label="$l becomes a language" test="//bf:Work[@rdf:about='http://example.org/1#Work']/bf:language/bf:Language/rdfs:label = 'French'"/>
+    <x:expect label="$l becomes a language" test="//bf:Work[@rdf:about='http://example.org/4#Work']/bf:language/bf:Language/rdfs:label = 'English'"/>
+    <x:expect label="...and creates a translationOf property" test="count(//bf:Work[@rdf:about='http://example.org/4#Work']/bf:translationOf) = 1"/>
+    <x:expect label="...potentially with a language code from 041 $h" test="//bf:Work[@rdf:about='http://example.org/4#Work']/bf:translationOf/bf:Work/bf:language/@rdf:resource='http://id.loc.gov/vocabulary/languages/epo'"/>
     <x:expect label="$m becomes a musicMedium" test="//bf:Work[@rdf:about='http://example.org/1#Work']/bf:musicMedium/bf:MusicMedium/rdfs:label = 'violin, viola'"/>
     <x:expect label="$o becomes a version" test="//bf:Work[@rdf:about='http://example.org/1#Work']/bf:version = 'arr'"/>
     <x:expect label="$r becomes a musicKey" test="//bf:Work[@rdf:about='http://example.org/1#Work']/bf:musicKey = 'D major'"/>
