@@ -1,5 +1,6 @@
 --- 1.1.1-SNAPSHOT
 
+Create translationOf property of main Work for 130/240 field with $l (fixes lcnetdev/marc2bibframe2#25)
 Create hasInstance property of main Work for 776 field (fixes lcnetdev/marc2bibframe2#31)
 Create bflc:Relation object for bflc:relation proeprty (fixes lcnetdev/marc2bibframe2#34)
 Fix conversion of hierarchical geographic tags (662, 752) (fixes lcnetdev/marc2bibframe2#30)
